--- a/themes/alex_theme/assets/scss/triple-hyde/_variables.scss
+++ b/themes/alex_theme/assets/scss/triple-hyde/_variables.scss
@@ -99,7 +99,8 @@ $site__title-font-size: 2.5rem;
 $copyright-font-size: $font-scale-dot7;
 
 // content
-$content-max-width: 38rem; // @ ~70 CPL
+$content-max-width: 80rem; // @ ~70 CPL
+$content-width: 100%; // @ ~70 CPL
 $content-margin-left: $sidebar-width + 2rem;
 $content-margin-right: 2rem;
 
