nicer portfolio summary

--- a/themes/alex_theme/assets/scss/triple-hyde/_responsive.scss
+++ b/themes/alex_theme/assets/scss/triple-hyde/_responsive.scss
@@ -146,11 +146,11 @@
   }
   .col-md-4 {
     float: left;
-    width: 33.33333333%;
+    width: 20%;
   }
   .col-md-8 {
     float: left;
-    width: 66.66666667%;
+    width: 80%;
   }
   .portfolio-container {
     width: 68rem;
