--- a/themes/alex_theme/layouts/partials/portfolio/content.html
+++ b/themes/alex_theme/layouts/partials/portfolio/content.html
@@ -33,13 +33,13 @@
             <div class="row">
                 <div class="col-md-4 col-sm-4 col-xs-12" href="{{ .Params.link }}"
                     target="_blank" rel="noopener noreferrer">
-                    {{ if .Params.screenshot }}
-                        <img class="project__image img-responsive" src="{{ .Params.screenshot }}" alt="{{ .Title }}">
+                    {{ if  .Resources.GetMatch "featured.*" }}
+                    <img class="project__image img-responsive" src="{{ ( .Resources.GetMatch "featured.*" ).RelPermalink }}" alt="{{ .Title }}">
                     {{ end }}
                 </div>
                 <div class="col-md-8 col-sm-8 col-xs-12">
                     <span class="project__title">
-                        <a href="{{ .Params.link }}" target="_blank" rel="noopener noreferrer">{{ .Title }}</a>
+                        <a href="{{ .RelPermalink }}" target="_self" rel="noopener noreferrer">{{ .Title }}</a>
                     </span>
                     <span class="project__subtitle-small">
                         <sup><i class="fa fa-quote-left" aria-hidden="true"></i></sup>
@@ -47,7 +47,9 @@
                         <sup><i class="fa fa-quote-right" aria-hidden="true"></i></sup>
                     </span>
                     <span class="project__summary">
-                        {{ .Content }}
+                        {{ with .Resources.GetMatch "**summary.md" }} 
+                            {{ .Content }}
+                        {{ end }}
                     </span>
                 </div>
             </div>
