--- a/themes/alex_theme/layouts/partials/header.html
+++ b/themes/alex_theme/layouts/partials/header.html
@@ -1,4 +1,5 @@
 <head>
+    <title>Alex Charlton</title>
     <link href="https://gmpg.org/xfn/11" rel="profile">
     {{ if .Params.canonicalUrl }}
     <link rel="canonical" href="{{ .Params.canonicalUrl }}">
