--- a/themes/alex_theme/layouts/index.html
+++ b/themes/alex_theme/layouts/index.html
@@ -3,6 +3,7 @@
 {{ end }}
 
 {{ define "content" }}
+<meta http-equiv="refresh" content="0; {{ (.GetPage  "about.md").RelPermalink }}" />
   <div class="post-list">
     {{ $paginator := .Paginate (where .Site.RegularPages "Type" "in" site.Params.mainSections) }}
     {{ range $paginator.Pages }}
