--- a/themes/alex_theme/layouts/partials/header.html
+++ b/themes/alex_theme/layouts/partials/header.html
@@ -16,6 +16,7 @@
     {{ "<!-- Icons -->" | safeHTML }}
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144-precomposed.png">
     <link rel="shortcut icon" href="{{ (resources.Get "favicon.png").RelPermalink }}">
+    <meta name="google-site-verification" content="v-XLI9BTIPrE97iqMW7GcaXPMhAzezzT8VKMD_eYxEQ" />
     {{ partial "header/feeds.html" . }}
     {{ partial "header/custom.html" }}
 </head>
